package com.example.politi_cal.models

data class Category(val categoryID: String,
                    val categoryName: String)
