package com.example.politi_cal.models


data class Company(val companyID: String,
                   val category: String,
                   )
