package com.example.politi_cal.models

data class VoteOption(
    val voteID: String,
    val voteDescription: String
)
